Fix broken style for notification icon

--- a/app/javascript/layouts/school/components/SchoolAdminNavbar__Root.css
+++ b/app/javascript/layouts/school/components/SchoolAdminNavbar__Root.css
@@ -57,3 +57,8 @@
 .school-admin-navbar__primary-nav-link--active:hover {
   @apply .bg-gray-200 .text-primary-500;
 }
+
+.student-navbar__notifications-unread-bullet {
+  top: 4px;
+  right: 8px;
+}
